# rougenoir

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  TODO.md  cliff.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  miri.yml  release.yml  ruby.yml
benches/: tree.rs
bindings/ruby/: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  rougenoir_ruby.gemspec
bindings/ruby/ext/rougenoir_ruby/: Cargo.toml  extconf.rb
bindings/ruby/ext/rougenoir_ruby/src/: lib.rs
bindings/ruby/lib/: rougenoir_ruby.rb
bindings/ruby/lib/rougenoir_ruby/: version.rb
bindings/ruby/test/: test_helper.rb  tree_test.rb
docs/: TODO.md  contributing.md  release.md
examples/: interval_tree.rs
scripts/: release.sh
src/: alloc.rs  cached_tree.rs  iter.rs  lib.rs  node.rs  root.rs  set.rs  tree.rs
src/iter/: cached_tree.rs  mod.rs  node.rs  set.rs  tree.rs
